Update package lock and make b a dep of a

--- a/packages/lt-a/package.json
+++ b/packages/lt-a/package.json
@@ -15,5 +15,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "lt-b": "^0.0.0"
   }
 }
