--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "publish": {
+      "message": "chore(release): publish %s",
+      "registry": "http://localhost:4873/"
+    }
   "version": "0.0.0"
 }
