--- a/packages/lt-b/package.json
+++ b/packages/lt-b/package.json
@@ -15,5 +15,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "lt-c": "^1.0.0"
   }
 }
