--- a/packages/lt-b/package.json
+++ b/packages/lt-b/package.json
@@ -17,6 +17,6 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "lt-c": "^1.0.0"
+    "lt-c": "canary"
   }
 }
