--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "root",
-  "workspaces": ["./packages/*"],
+  "workspaces": [
+    "./packages/*"
+  ],
   "private": true,
   "devDependencies": {
     "lerna": "^4.0.0"
-  }
+  },
+  "version": "0.0.1"
 }
