--- a/lerna.json
+++ b/lerna.json
@@ -2,11 +2,12 @@
   "packages": [
     "packages/*"
   ],
+  ""
   "command": {
     "publish": {
       "message": "chore(release): publish %s",
       "registry": "http://localhost:4873/"
     }
   },
-  "version": "1.1.0"
+  "version": "independent"
 }
