--- a/packages/lt-b/package.json
+++ b/packages/lt-b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lt-b",
+  "name": "@foo/lt-b",
   "version": "1.2.0",
   "description": "> TODO: description",
   "author": "Chris Oden <coden@its.jnj.com>",
